--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -33,8 +33,8 @@ jobs:
         run: |
           git config --local user.name "github-actions"
           git config --local user.email "github-actions@github.com"
-          git add job_listings_*.csv docs/job_postings_visualization.png
-          git commit -m "Update job listings and visualization" || echo "No changes to commit"
+          git add job_listings_*.csv
+          git commit -m "Update job listings"
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
