--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -5,7 +5,7 @@ permissions:
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Runs every day at midnight
+    - cron: '0 * * * *'  # Runs every day at midnight
   workflow_dispatch:
 
 env:
@@ -24,24 +24,37 @@ jobs:
         with:
           python-version: '3.x'
 
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          # Install Playwright browsers
           python -m playwright install
 
+      - name: Check if it's midnight ET
+        id: check_time
+        run: |
+          CURRENT_TIME=$(TZ="America/New_York" date +%H)
+          if [ "$CURRENT_TIME" -eq 23 ]; then
+            echo "It's 11PM ET."
+            echo "run_scraper=true" >> $GITHUB_ENV
+          else
+            echo "It's not 11PM ET."
+            echo "run_scraper=false" >> $GITHUB_ENV
+          fi
+
       - name: Run the scraper
+        if: env.run_scraper == 'true'
         run: |
           python scraper.py
-      - name: Debug GITHUB_TOKEN
-        run: echo "GITHUB_TOKEN is set"
+
       - name: Commit and push changes
+        if: env.run_scraper == 'true'
         run: |
           git config --local user.name "github-actions"
           git config --local user.email "github-actions@github.com"
           git add data/job_listings_*.csv
           git commit -m "Update job listings"
           git push
-
-
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
