--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -5,7 +5,7 @@ permissions:
 
 on:
   schedule:
-    - cron: '17 * * * *'  # Runs hourly at minute 17
+    - cron: '29 23 * * *'  # Runs hourly at minute 17
   workflow_dispatch:
 
 env:
@@ -24,32 +24,17 @@ jobs:
         with:
           python-version: '3.x'
 
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           python -m playwright install
 
-      - name: Check if it's midnight ET
-        id: check_time
-        run: |
-          CURRENT_TIME=$(TZ="America/New_York" date +%H)
-          if [ "$CURRENT_TIME" -eq 23 ]; then
-            echo "It's 11:17 ET."
-            echo "run_scraper=true" >> $GITHUB_ENV
-          else
-            echo "It's not 11:17 ET."
-            echo "run_scraper=false" >> $GITHUB_ENV
-          fi
-
       - name: Run the scraper
-        if: env.run_scraper == 'true'
         run: |
           python scraper.py
 
       - name: Commit and push changes
-        if: env.run_scraper == 'true'
         run: |
           git config --local user.name "github-actions"
           git config --local user.email "github-actions@github.com"
