--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -4,9 +4,8 @@ permissions:
   contents: write  # Allow write access to the repository contents
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: "32 13,14,15 * * *"  # Runs at UTC 22:15, EDT 18:15, EST 15:15
+    - cron: "38 * * * *"  # Runs at UTC 22:15, EDT 18:15, EST 15:15
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
