--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -6,7 +6,7 @@ permissions:
 on:
   schedule:
     - cron: "38 * * * *"  # Runs at UTC 22:15, EDT 18:15, EST 15:15
-
+  workflow_dispatch:
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
