--- a/.github/workflows/driller.yml
+++ b/.github/workflows/driller.yml
@@ -12,7 +12,7 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
-  scrape:
+  drill:
     runs-on: ubuntu-latest
 
     steps:
@@ -39,7 +39,7 @@ jobs:
           git config --local user.name "github-actions"
           git config --local user.email "github-actions@github.com"
           git add data/jobs/*
-          git commit -m "Update job listings"
+          git commit -m "Deposit drilled bits"
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
