--- a/.github/workflows/emailer.yml
+++ b/.github/workflows/emailer.yml
@@ -24,6 +24,9 @@ jobs:
 
       - name: Run the script
         env:
-          EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}  # Pass the secret to the environment
+          # Pass the secret to the environment
+          EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+          SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
+          RECEIVER_EMAIL: ${{ secrets.RECEIVER_EMAIL }}
         run: |
           python emailer.py
