--- a/.github/workflows/emailer.yml
+++ b/.github/workflows/emailer.yml
@@ -28,5 +28,6 @@ jobs:
           EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
           SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
           RECEIVER_EMAIL: ${{ secrets.RECEIVER_EMAIL }}
+          SALARY_CUTOFF: ${{ secrets.SALARY_CUTOFF }}
         run: |
           python emailer.py
